# 20260109-care-activation

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yaml  docker-build.yml  docker-prerelease.yml  docker-release.yml  ecs-deploy.yml  sync-main-to-dev.yml  terraform-apply.yaml  terraform-aws-apply.yaml  terraform-aws-pr.yaml  terraform-pr.yaml
control-panel/: package-lock.json  package.json
infra/terraform/: .gitignore  .terraform-docs.yml  LICENSE  README.md
pipecat/: .env.example  Dockerfile  README.md  bot.py  pcc-deploy.toml  pyproject.toml
prisma/: .env.example  package-lock.json  package.json  prisma.config.ts  schema.prisma
scripts/: README.md  aws-mfa.sh  datadog-mysql-monitoring.sql  run-db-migration.sh  ssm-ecs-container-tunnel.sh  ssm-ecs-rds-tunnel.sh  ssm-rds-tunnel.sh
server/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
server/docker/mysql-init/: 00-shadow-db.sql
server/prisma/: schema.prisma
server/scripts/: push-pathway.ts  test-pathway.ts
server/src/: main.ts
server/test/: app.e2e-spec.ts  jest-e2e.config.js  mocks.ts
shared/: package.json
www/: .env.example  .prettierrc  Dockerfile  docker-compose.yml  eslint.config.mjs  jest.config.js  package-lock.json  package.json
www/prisma/: schema.prisma
www/scripts/: push-pathway.ts  test-pathway.ts
www/src/: app.module.ts  main.ts  utils.ts
www/test/: app.e2e-spec.ts  jest-e2e.config.js  mocks.ts
(+141 files in other folders)
