[project]
name = "twilio-chatbot-dial-out"
version = "0.1.0"
description = "Daily SIP + Twilio Dial-out example"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[cartesia,daily,deepgram,google,local-smart-turn-v3,openai,runner,silero,soundfile]>=0.0.91",
    "pipecatcloud>=0.2.7",
]

[dependency-groups]
dev = [
    "pre-commit~=4.2.0",
    "ruff~=0.12.1",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.ruff]
exclude = [".git", "*_pb2.py"]
line-length = 100

[tool.ruff.lint]
select = ["I"]
ignore = []
